base/be/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: attendance-checker-be-deployment
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: attendance-checker-be-prod
  replicas: 1
  template:
    metadata:
      labels:
        app.kubernetes.io/name: attendance-checker-be-prod
    spec:
      containers:
      - image: scgskku/attendance-checker-be-prod
        imagePullPolicy: Always
        name: attendance-checker-be-prod
        ports:
        - containerPort: 8000
