base/be/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: attendance-checker-be-prod-service
spec:
  ports:
    - port: 80
      targetPort: 8080
      protocol: TCP
  selector:
    app.kubernetes.io/name: attendance-checker-be-prod
