base/be/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: attendance-checker-be-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt-clusterissuer"
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-origin: "https://taghedge.scg.skku.ac.kr"
spec:
  tls:
    - hosts:
        - api.taghedge.scg.skku.ac.kr
      secretName: gitops-tls
  rules:
    - host: api.taghedge.scg.skku.ac.kr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: attendance-checker-be-prod-service
                port:
                  number: 80
